--- a/js/i18n/ar-SA.json
+++ b/js/i18n/ar-SA.json
@@ -83,7 +83,7 @@
     "carouselAdvance": {
         "aria-label": "تقدم"
     },
-    "UNEDacces": {
+    "UNEDaccess": {
         "aria-label": "عرض الشهادة",
         "text": "الوصول إلى الجامعة"
     },
