--- a/js/i18n/ca-ES.json
+++ b/js/i18n/ca-ES.json
@@ -83,7 +83,7 @@
     "carouselAdvance": {
         "aria-label": "Avançar"
     },
-    "UNEDacces": {
+    "UNEDaccess": {
         "aria-label": "Veure certificat",
         "text": "Accès a la universitat"
     },
