--- a/js/i18n/es-ES.json
+++ b/js/i18n/es-ES.json
@@ -83,7 +83,7 @@
     "carouselAdvance": {
         "aria-label": "Avanzar"
     },
-    "UNEDacces": {
+    "UNEDaccess": {
         "aria-label": "Ver certificado",
         "text": "Acceso a la universidad"
     },
