--- a/js/i18n/ru-RU.json
+++ b/js/i18n/ru-RU.json
@@ -83,7 +83,7 @@
     "carouselAdvance": {
         "aria-label": "Вперёд"
     },
-    "UNEDacces": {
+    "UNEDaccess": {
         "aria-label": "Смотреть сертификат",
         "text": "Доступ к университету"
     },
