--- a/js/i18n/en-GB.json
+++ b/js/i18n/en-GB.json
@@ -70,6 +70,12 @@
     "linkedin": {
         "aria-label": "Visit Linkedin profile"
     },
+    "discord": {
+        "aria-label": "Add to friends"
+    },
+    "location": {
+        "aria-label": "Location"
+    },
     "studies": {
         "text": "Studies"
     },
